<resources>
    <string name="app_name">RideShare Driver</string>
    <string name="action_settings">Settings</string>
    <string name="login_username">Username</string>
    <string name="login_password">Password</string>
    <string name="button_login">Login</string>
    <string name="button_register">Register</string>
    <string name="cancelStr">Cancel</string>
    <string name="registerStr">Register</string>
    <string name="strfull_name">Full Name</string>
    <string name="str_email">Email Address</string>
    <string name="strconfirm_password">Confirm Password</string>
    <string name="Button_start">Create your trip here</string>
    <string name="createvehicle">Create vehicle here</string>
    <string name="cancletrip">Cancle trip</string>
    <string name="startlocation">Start Location:</string>
    <string name="startdate">Start time:</string>
    <string name="enddate">Finished at:</string>
    <string name="yourtripdetails">Your trip details</string>
    <string name="stop1">Stop 1</string>
    <string name="stop2">Stop 2 (Optional)</string>
    <string name="stop3">Stop 3 (Optional)</string>
    <string name="cost1">Cost 1</string>
    <string name="cost2">Cost 2</string>
    <string name="cost3">Cost 3</string>
    <string name="cancel">Cancel</string>
    <string name="create_trip">Create Trip</string>
    <string name="my_trips">My Trips</string>
    <string name="update_user">Update User</string>
    <string name="sign_out">Sign Out</string>
    <string name="title_mytrip_list">Trips</string>
    <string name="title_mytrip_detail">myTrip Detail</string>
    <string name="confirm_new_password">Confirm New Password</string>
    <string name="new_password">New Password</string>
    <string name="current_password">Current Password</string>
    <string name="new_full_name">New Full Name</string>
    <string name="new_email_address">New Email Address</string>
    <string name="completed_trip">Completed</string>
    <string name="ongoing_trip">Ongoing</string>
    <string name="planned_trip">Planned</string>
    <string name="create_vehicle">Create Vehicle</string>
    <string name="colour">Colour</string>
    <string name="model">Model</string>
    <string name="vehicle_type">Vehicle Type</string>
    <string name="number_of_seats">Number of Seats</string>
    <string name="date_first">01-01-2018</string>
    <string name="time_first">10:00</string>
    <string name="start_date">Start Date:</string>
    <string name="start_time">Start Time:</string>
    <string name="end_date">End Date:</string>
    <string name="end_time">End Time:</string>
    <string name="pick_date">Pick Date</string>
    <string name="pick_time">Pick Time</string>
    <string name="modify_trip">Modify Trip</string>
</resources>
