<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/c"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ModifyTrip"
    tools:layout_editor_absoluteY="81dp">

    <TextView
        android:id="@+id/end_date_label"
        android:layout_width="99dp"
        android:layout_height="29dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:text="@string/end_date"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/stop3" />

    <TextView
        android:id="@+id/end_time_label"
        android:layout_width="99dp"
        android:layout_height="29dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="1dp"
        android:text="@string/end_time"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/end_date_label" />

    <TextView
        android:id="@+id/endtimetv"
        android:layout_width="0dp"
        android:layout_height="29dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="1dp"
        android:layout_marginEnd="20dp"
        android:onClick="showTimePickerDialog"
        android:text="@string/time_first"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/end_time_label"
        app:layout_constraintTop_toBottomOf="@+id/enddatetv" />

    <TextView
        android:id="@+id/enddatetv"
        android:layout_width="0dp"
        android:layout_height="29dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:onClick="showDatePickerDialog"
        android:text="@string/date_first"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/end_date_label"
        app:layout_constraintTop_toBottomOf="@+id/stop3" />

    <TextView
        android:id="@+id/starttimetv"
        android:layout_width="0dp"
        android:layout_height="29dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="1dp"
        android:layout_marginEnd="20dp"
        android:onClick="showTimePickerDialog"
        android:text="@string/time_first"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/startTimeLabel"
        app:layout_constraintTop_toBottomOf="@+id/startdatetv" />

    <TextView
        android:id="@+id/startTimeLabel"
        android:layout_width="99dp"
        android:layout_height="29dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="1dp"
        android:text="@string/start_time"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/startDateLabel" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="391dp" />

    <android.support.constraint.Group
        android:id="@+id/group"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/newtrip_trip_details"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="60dp"
        android:layout_marginEnd="60dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/mybutton"
        android:onClick="cancelButton"
        android:text="@string/cancel"
        android:textColor="@android:color/background_light"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/cancel_trip_details"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="60dp"
        android:layout_marginEnd="60dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/mybutton"
        android:onClick="modifyTripButton"
        android:text="@string/modify_trip"
        android:textColor="@android:color/background_light"
        app:layout_constraintBottom_toTopOf="@+id/newtrip_trip_details"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/startlocation"
        android:layout_width="0dp"
        android:layout_height="42dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="20dp"
        android:ems="10"
        android:hint="@string/startlocation"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/stop1"
        android:layout_width="231dp"
        android:layout_height="40dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:hint="@string/stop1"
        android:inputType="text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/starttimetv" />

    <EditText
        android:id="@+id/cost1"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:ems="10"
        android:hint="@string/cost1"
        android:inputType="numberDecimal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/stop1"
        app:layout_constraintTop_toBottomOf="@+id/starttimetv" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="20dp" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="16dp" />

    <EditText
        android:id="@+id/stop2"
        android:layout_width="231dp"
        android:layout_height="40dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:ems="10"
        android:hint="@string/stop2"
        android:inputType="text|textPersonName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/stop1" />

    <EditText
        android:id="@+id/cost2"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="10dp"
        android:ems="10"
        android:hint="@string/cost2"
        android:inputType="numberDecimal"
        app:layout_constraintBottom_toTopOf="@+id/cost3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/stop2"
        app:layout_constraintTop_toBottomOf="@+id/cost1"
        app:layout_constraintVertical_chainStyle="spread_inside" />

    <EditText
        android:id="@+id/stop3"
        android:layout_width="231dp"
        android:layout_height="40dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:ems="10"
        android:hint="@string/stop3"
        android:inputType="text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/stop2" />

    <EditText
        android:id="@+id/cost3"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="20dp"
        android:ems="10"
        android:hint="@string/cost3"
        android:inputType="numberDecimal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/stop3"
        app:layout_constraintTop_toBottomOf="@+id/cost2" />

    <TextView
        android:id="@+id/startDateLabel"
        android:layout_width="99dp"
        android:layout_height="29dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="4dp"
        android:text="@string/start_date"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/startlocation" />

    <TextView
        android:id="@+id/error"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:text=""
        android:textColor="@color/colorAccent"
        android:visibility="gone"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/startdatetv"
        android:layout_width="0dp"
        android:layout_height="29dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="20dp"
        android:onClick="showDatePickerDialog"
        android:text="@string/date_first"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/startDateLabel"
        app:layout_constraintTop_toBottomOf="@+id/startlocation" />

</android.support.constraint.ConstraintLayout>